--- a/public/gastos/gastos.css
+++ b/public/gastos/gastos.css
@@ -27,6 +27,7 @@ body {
   
   input[type="number"],
   input[type="text"],
+  input[type="date"],
   button {
     width: calc(100% - 20px);
     padding: 8px;
